--- a/source/src/qt/machines/gamegear/CMakeLists.txt
+++ b/source/src/qt/machines/gamegear/CMakeLists.txt
@@ -1,18 +1,18 @@
 message("* qt/gamegear")
 
-set(s_qt_sms_headers
+set(s_qt_gamegear_headers
 	  menuclasses.h
 	  )
 
 if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_sms_headers_MOC ${s_qt_sms_headers})
+  QT5_WRAP_CPP(s_qt_gamegear_headers_MOC ${s_qt_gamegear_headers})
 else()
-  QT4_WRAP_CPP(s_qt_sms_headers_MOC ${s_qt_sms_headers})
+  QT4_WRAP_CPP(s_qt_gamegear_headers_MOC ${s_qt_gamegear_headers})
 endif()
   
-add_library(qt_sms
+add_library(qt_gamegear
 	  MainWindow.cpp
-	  ${s_qt_sms_headers_MOC}
+	  ${s_qt_gamegear_headers_MOC}
 )
 
 
