--- a/source/src/vm/gamegear/CMakeLists.txt
+++ b/source/src/vm/gamegear/CMakeLists.txt
@@ -4,14 +4,14 @@ message("* vm/fm7")
 
 
 if(BUILD_GAMEGEAR)
-add_library(vm_sms
+add_library(vm_gamegear
 	gamegear.cpp
 	keyboard.cpp
 	memory.cpp
 	system.cpp
 )
 else()
-add_library(vm_sms
+add_library(vm_gamegear
 	mastersystem.cpp
 	keyboard.cpp
 	memory.cpp
