--- a/source/build-cmake/multi8/CMakeLists.txt
+++ b/source/build-cmake/multi8/CMakeLists.txt
@@ -9,24 +9,12 @@ cmake_policy(SET CMP0011 NEW)
 message("")
 message("** Start of configure CommonSourceProject,Mitsubishi Multi 8, Qt **")
 message("")
-
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
-
 project (emumulti8)
-
+set(VM_NAME multi8)
+set(USE_FMGEN ON)
 set(EXEC_TARGET emumulti8)
-
-set(LOCAL_LIBS     qt_osd
-		   qt_multi8
-		   qt_debugger
-		   qt_gui
-		   vm_multi8
-		   vm_vm
-		   vm_fmgen
-		   common_common
-                   )
-
 set(VMFILES_BASE
                    z80.cpp
 		   
@@ -45,33 +33,15 @@ set(VMFILES_BASE
 		   event.cpp
 )
 
-
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
-#set(WITH_DEBUGGER ON CACHE BOOL "Build with debugger.")
+set(WITH_DEBUGGER ON CACHE BOOL "Build with debugger.")
 
 include(detect_target_cpu)
-# set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
 set(VMFILES ${VMFILES_BASE})
 add_definitions(-D_MULTI8)
 set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/multi8.qrc)
 
-#include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/multi8)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/multi8)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/debugger)
-
 include(config_commonsource)
-
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fmgen)
-
-add_subdirectory(../../src/vm/multi8 vm/multi8)
-add_subdirectory(../../src/vm/fmgen vm/fmgen)
-add_subdirectory(../../src/qt/machines/multi8 qt/multi8)
-add_subdirectory(../../src/qt/debugger qt/debugger)
-     
-add_subdirectory(../../src/qt/common qt/common)
