--- a/source/build-cmake/mz3500/CMakeLists.txt
+++ b/source/build-cmake/mz3500/CMakeLists.txt
@@ -13,33 +13,25 @@ message("")
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 project (mz3500)
-
-set(LOCAL_LIBS	   qt_mz3500
-		   qt_gui
-		   qt_osd
-		   vm_mz3500
-		   vm_vm
-#		   vm_fmgen
-		   common_common
-                   )
-
+set(VM_NAME mz3500)
+set(USE_FMGEN OFF)
 set(VMFILES
-		   z80.cpp
+	   z80.cpp
+	   
+	   i8251.cpp
+	   i8253.cpp
+	   i8255.cpp
 		   
-		   i8251.cpp
-		   i8253.cpp
-		   i8255.cpp
-		   
-		   ls244.cpp
-		   upd1990a.cpp
-		   upd7220.cpp
-		   upd765a.cpp
-		   
-		   pcm1bit.cpp
-		   
-		   disk.cpp
-		   event.cpp
-		   io.cpp
+	   ls244.cpp
+	   upd1990a.cpp
+	   upd7220.cpp
+	   upd765a.cpp
+	   
+	   pcm1bit.cpp
+	   
+	   disk.cpp
+	   event.cpp
+	   io.cpp
 )
 
 set(BUILD_SHARED_LIBS OFF)
@@ -48,22 +40,10 @@ set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
 set(WITH_DEBUGGER ON CACHE BOOL "Build with debugger.")
 
 include(detect_target_cpu)
-# set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
 add_definitions(-D_MZ3500)
 set(EXEC_TARGET emumz3500)
 set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/mz3500.qrc)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/mz3500)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/mz3500)
-
 include(config_commonsource)
-
-#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fmgen)
-
-add_subdirectory(../../src/vm/mz3500 vm/mz3500)
-add_subdirectory(../../src/qt/machines/mz3500 qt/mz3500)
-#add_subdirectory(../../src/vm/fmgen vm/fmgen)
-add_subdirectory(../../src/qt/common qt/common)
