--- a/source/build-cmake/mz5500/CMakeLists.txt
+++ b/source/build-cmake/mz5500/CMakeLists.txt
@@ -14,74 +14,6 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 project (mz5500)
 
-set(LOCAL_LIBS 	   qt_osd
-		   qt_mz5500
-		   qt_debugger
-		   qt_gui
-		   vm_mz5500
-		   vm_vm
-		   vm_fmgen
-		   common_common		   
-                   )
-
-set(VMFILES
-		   i286.cpp
-		   
-		   i8237.cpp
-		   i8255.cpp
-		   i8259.cpp
-		   
-		   ls393.cpp
-		   rp5c01.cpp
-		   upd7220.cpp
-		   upd765a.cpp
-		   ym2203.cpp
-		   z80ctc.cpp
-		   z80sio.cpp
-		   
-		   disk.cpp
-		   event.cpp
-		   io.cpp
-)
-
-set(BUILD_SHARED_LIBS OFF)
-set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
-set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
 set(BUILD_MZ5500 ON CACHE BOOL "Build emumz5500")
-set(BUILD_MZ6500 OFF CACHE BOOL "Build emumz6500")
-set(BUILD_MZ6550 OFF CACHE BOOL "Build emumz6550")
+include(config_mz5500)
 
-#set(WITH_DEBUGGER ON CACHE BOOL "Build with debugger.")
-
-include(detect_target_cpu)
-# set entry
-set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
-
-if(BUILD_MZ5500)
-  add_definitions(-D_MZ5500)
-  set(EXEC_TARGET emumz5500)
-  set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/mz5500.qrc)
-elseif(BUILD_MZ6500)
-  add_definitions(-D_MZ6500)
-  set(EXEC_TARGET emumz6500)
-  set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/mz6500.qrc)
-else()
-  add_definitions(-D_MZ6550)
-  set(EXEC_TARGET emumz6550)
-  set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/mz6550.qrc)
-endif()
-
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/mz5500)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/mz5500)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/debugger)
-
-include(config_commonsource)
-
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fmgen)
-
-add_subdirectory(../../src/vm/mz5500 vm/mz5500)
-add_subdirectory(../../src/qt/machines/mz5500 qt/mz5500)
-add_subdirectory(../../src/qt/debugger qt/debugger)
-add_subdirectory(../../src/vm/fmgen vm/fmgen)
-add_subdirectory(../../src/qt/common qt/common)
