--- a/source/build-cmake/hc20/CMakeLists.txt
+++ b/source/build-cmake/hc20/CMakeLists.txt
@@ -16,34 +16,26 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 project (emuhc20)
 
 set(EXEC_TARGET emuhc20)
-
-set(LOCAL_LIBS 	   qt_osd
-		   qt_hc20
-		   qt_gui
-		   vm_hc20
-		   vm_vm
-		   common_common
-                   )
-
+set(VM_NAME hc20)
+set(USE_FMGEN OFF)
 set(VMFILES_BASE
-  mc6800.cpp
-  tf20.cpp
-  hd146818p.cpp
+      mc6800.cpp
+      tf20.cpp
+      hd146818p.cpp
   
-  z80.cpp
-  z80sio.cpp
-  upd765a.cpp
-  i8255.cpp
-
-  beep.cpp
-  disk.cpp
-
-  datarec.cpp
-  event.cpp
-  io.cpp
-  memory.cpp
+      z80.cpp
+      z80sio.cpp
+      upd765a.cpp
+      i8255.cpp
+      
+      beep.cpp
+      disk.cpp
+      
+      datarec.cpp
+      event.cpp
+      io.cpp
+      memory.cpp
 )
-
 
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
@@ -51,27 +43,11 @@ set(WITH_DEBUGGER ON CACHE BOOL "Build with debugger.")
 
 set(VMFILES_HC20 ${VMFILES_BASE})
 
-
 include(detect_target_cpu)
-#include(windows-mingw-cross)
-# set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
 set(VMFILES ${VMFILES_HC20})
 add_definitions(-D_HC20)
 set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/hc20.qrc)
 
-
-#include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/hc20)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/hc20)
-
 include(config_commonsource)
-
-add_subdirectory(../../src/vm/hc20 vm/hc20)
-#add_subdirectory(../../src/vm/fmgen vm/fmgen)
-add_subdirectory(../../src/qt/machines/hc20 qt/hc20)
-
-     
-add_subdirectory(../../src/qt/common qt/common)
