--- a/source/build-cmake/hc40/CMakeLists.txt
+++ b/source/build-cmake/hc40/CMakeLists.txt
@@ -16,25 +16,18 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 project (emuhc40)
 
 set(EXEC_TARGET emuhc40)
-
-set(LOCAL_LIBS     qt_osd
-		   qt_hc40
-		   qt_gui
-		   vm_hc40
-		   vm_vm
-		   common_common
-                   )
+set(VM_NAME hc40)
+set(USE_FMGEN OFF)
 
 set(VMFILES_BASE
-  z80.cpp
-  ptf20.cpp
-  beep.cpp
-  disk.cpp
-
-  datarec.cpp
-  event.cpp
+      z80.cpp
+      ptf20.cpp
+      beep.cpp
+      disk.cpp
+      
+      datarec.cpp
+      event.cpp
 )
-
 
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
@@ -42,26 +35,11 @@ set(WITH_DEBUGGER ON CACHE BOOL "Build with debugger.")
 
 set(VMFILES_HC40 ${VMFILES_BASE})
 
-
 include(detect_target_cpu)
-#include(windows-mingw-cross)
-# set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
 set(VMFILES ${VMFILES_HC40})
 add_definitions(-D_HC40)
 set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/hc40.qrc)
 
-
-#include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/hc40)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/hc40)
-
 include(config_commonsource)
-
-add_subdirectory(../../src/vm/hc40 vm/hc40)
-add_subdirectory(../../src/qt/machines/hc40 qt/hc40)
-     
-add_subdirectory(../../src/qt/common qt/common)
