--- a/source/build-cmake/mycomz80a/CMakeLists.txt
+++ b/source/build-cmake/mycomz80a/CMakeLists.txt
@@ -13,50 +13,33 @@ message("")
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 project (mycomz80a)
-
-set(LOCAL_LIBS     qt_osd
-		   qt_mycomz80a
-		   qt_gui
-		   vm_mycomz80a
-		   vm_vm
-		   common_common		   
-                   )
-
+set(VM_NAME mycomz80a)
+set(USE_FMGEN OFF)
 set(VMFILES
-		   z80.cpp
-		   hd46505.cpp
-		   
-		   i8255.cpp
-		   msm58321.cpp
-		   sn76489an.cpp
-		   
-		   datarec.cpp
-		   
-		   event.cpp
-		   io.cpp
+	z80.cpp
+	hd46505.cpp
+	
+	i8255.cpp
+	msm58321.cpp
+	sn76489an.cpp
+	
+	datarec.cpp
+	
+	event.cpp
+	io.cpp
 )
 
 set(BUILD_MYCOMZ80A ON CACHE BOOL "Build EMU-MYCOMZ80A")
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
-set(XM7_VERSION 3)
 set(WITH_DEBUGGER ON CACHE BOOL "Build with debugger.")
 
 include(detect_target_cpu)
-# set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
 add_definitions(-D_MYCOMZ80A)
 set(EXEC_TARGET emumycomz80a)
 set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/mycomz80a.qrc)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/mycomz80a)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/mycomz80a)
-
 include(config_commonsource)
-
-add_subdirectory(../../src/vm/mycomz80a vm/mycomz80a)
-add_subdirectory(../../src/qt/machines/mycomz80a qt/mycomz80a)
-add_subdirectory(../../src/qt/common qt/common)
