--- a/source/build-cmake/pc100/CMakeLists.txt
+++ b/source/build-cmake/pc100/CMakeLists.txt
@@ -13,16 +13,8 @@ message("")
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 project (pc100)
-
-set(LOCAL_LIBS 	   qt_debugger
-		   qt_pc100
-		   qt_gui
-		   qt_osd
-		   vm_pc100
-		   vm_vm
-		   common_common
-                   )
-
+set(VM_NAME pc100)
+set(USE_FMGEN ON)
 set(VMFILES
 		   i286.cpp
 		   
@@ -47,22 +39,12 @@ set(VMFILES
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
-
+set(WITH_DEBUGGER ON CACHE BOOL "Build with debugger")
 include(detect_target_cpu)
-# set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
 add_definitions(-D_PC100)
 set(EXEC_TARGET emupc100)
 set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/pc100.qrc)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/pc100)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/pc100)
-
 include(config_commonsource)
-
-add_subdirectory(../../src/vm/pc100 vm/pc100)
-add_subdirectory(../../src/qt/machines/pc100 qt/pc100)
-add_subdirectory(../../src/qt/common qt/common)
-add_subdirectory(../../src/qt/debugger qt/debugger)
