--- a/source/build-cmake/pc98lt/CMakeLists.txt
+++ b/source/build-cmake/pc98lt/CMakeLists.txt
@@ -12,83 +12,7 @@ message("")
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
-
 project (emupc98lt)
-
-
-set(LOCAL_LIBS     qt_osd
-                   qt_pc98ha
-		   qt_gui
-		   vm_pc98ha
-		   vm_vm
-		   common_common
-#		   vm_fmgen		   
-                  )
-
-set(VMFILES
-		   i8251.cpp
-		   i8253.cpp
-		   i8255.cpp
-		   i8259.cpp
-		   
-		   upd765a.cpp
-		   upd71071.cpp
-		   
-		   beep.cpp
-		   ls244.cpp
-		   
-		   disk.cpp
-		   event.cpp
-		   io.cpp
-		   memory.cpp
-)
-
-
-set(BUILD_SHARED_LIBS OFF)
-
-set(BUILD_PC98HA OFF CACHE BOOL "Build on PC98 HA")
 set(BUILD_PC98LT ON CACHE BOOL "Build on PC98 LT")
 
-set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
-set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
-
-set(WITH_DEBUGGER ON CACHE BOOL "Build witn debugger.")
-
-include(detect_target_cpu)
-#include(windows-mingw-cross)
-# set entry
-set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
-
-if(BUILD_PC98HA)
-   add_definitions(-D_PC98HA)
-   set(EXEC_TARGET emupc98ha)
-   set(VMFILES ${VMFILES}
-		   upd4991a.cpp
-		   i286.cpp
-   )
-   set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/pc98ha.qrc)
-elseif(BUILD_PC98LT)
-   add_definitions(-D_PC98LT)
-   set(EXEC_TARGET emupc98lt)
-   set(VMFILES ${VMFILES}
-		   upd1990a.cpp
-		   i286.cpp
-   )
-   set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/pc98lt.qrc)
-endif()
-
-
-#include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/pc98ha)
-#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fmgen)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/pc98ha)
-
-include(config_commonsource)
-
-
-add_subdirectory(../../src/vm/pc98ha vm/pc98ha)
-#add_subdirectory(../../src/vm/fmgen vm/fmgen)
-add_subdirectory(../../src/qt/machines/pc98ha qt/pc98ha)
-                           
-add_subdirectory(../../src/qt/common qt/common)
+include(config_pc98ha)
