--- a/source/build-cmake/pv1000/CMakeLists.txt
+++ b/source/build-cmake/pv1000/CMakeLists.txt
@@ -13,16 +13,8 @@ message("")
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 project (pv1000)
-
-set(LOCAL_LIBS     qt_osd
-		   qt_debugger
-		   qt_pv1000
-		   qt_gui
-		   vm_pv1000
-		   vm_vm
-		   common_common
-                   )
-
+set(VM_NAME pv1000)
+set(USE_FMGEN OFF)
 set(VMFILES
 		   z80.cpp
 		   io.cpp
@@ -34,22 +26,13 @@ set(VMFILES
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
+set(WITH_DEBUGGER ON CACHE BOOL "Build with debugger")
 
 include(detect_target_cpu)
-# set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
 add_definitions(-D_PV1000)
 set(EXEC_TARGET emupv1000)
 set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/pv1000.qrc)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/pv1000)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/pv1000)
-
 include(config_commonsource)
-
-add_subdirectory(../../src/vm/pv1000 vm/pv1000)
-add_subdirectory(../../src/qt/machines/pv1000 qt/pv1000)
-add_subdirectory(../../src/qt/debugger qt/debugger)
-add_subdirectory(../../src/qt/common qt/common)
