--- a/source/build-cmake/pyuta/CMakeLists.txt
+++ b/source/build-cmake/pyuta/CMakeLists.txt
@@ -14,15 +14,8 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 
 project (emupyuta)
-
-set(LOCAL_LIBS 	   qt_osd
-		   qt_pyuta
-		   qt_gui
-		   vm_pyuta
-		   vm_vm
-		   common_common
-                   )
-
+set(VM_NAME pyuta)
+set(USE_FMGEN OFF)
 set(VMFILES_BASE
 		   tms9995.cpp
 		   sn76489an.cpp
@@ -34,16 +27,12 @@ set(VMFILES_BASE
 		   memory.cpp
 )
 
-
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
-set(XM7_VERSION 3)
-#set(WITH_DEBUGGER ON CACHE BOOL "Build with debugger.")
+set(WITH_DEBUGGER OFF CACHE BOOL "Build with debugger.")
 
 include(detect_target_cpu)
-#include(windows-mingw-cross)
-# set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
 
@@ -52,15 +41,4 @@ add_definitions(-D_PYUTA)
 set(EXEC_TARGET emupyuta)
 set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/pyuta.qrc)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/pyuta)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/pyuta)
-
 include(config_commonsource)
-
-
-
-add_subdirectory(../../src/vm/pyuta vm/pyuta)
-add_subdirectory(../../src/qt/machines/pyuta qt/pyuta)
-     
-add_subdirectory(../../src/qt/common qt/common)
