--- a/source/build-cmake/tk80bs/CMakeLists.txt
+++ b/source/build-cmake/tk80bs/CMakeLists.txt
@@ -16,6 +16,8 @@ project (emutk80bs)
 
 set(VM_NAME tk80bs)
 set(USE_FMGEN OFF)
+set(WITH_JOYSTICK ON)
+set(WITH_MOUSE ON)
 
 set(VMFILES_BASE
 		   i8080.cpp
