--- a/source/build-cmake/babbage2nd/CMakeLists.txt
+++ b/source/build-cmake/babbage2nd/CMakeLists.txt
@@ -17,6 +17,9 @@ project (emubabbage2nd)
 set(EXEC_TARGET emubabbage2nd)
 set(VM_NAME babbage2nd)
 set(USE_FMGEN OFF)
+set(WITH_JOYSTICK OFF)
+set(WITH_MOUSE ON)
+
 set(VMFILES_BASE
   z80.cpp
   z80ctc.cpp
@@ -41,6 +44,5 @@ set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.
 set(VMFILES ${VMFILES_BASE})
 add_definitions(-D_BABBAGE2ND)
 set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/babbage2nd.qrc)
-
 
 include(config_commonsource)
