--- a/source/build-cmake/x07/CMakeLists.txt
+++ b/source/build-cmake/x07/CMakeLists.txt
@@ -16,6 +16,8 @@ project (emux07)
 
 set(VM_NAME x07)
 set(USE_FMGEN OFF)
+set(WITH_JOYSTICK OFF)
+set(WITH_MOUSE ON)
 
 set(VMFILES_BASE
 		   z80.cpp
