[VM][MSX][JR100][JX][MZ80B] Fix FTBFSs.

--- a/source/build-cmake/msx1/CMakeLists.txt
+++ b/source/build-cmake/msx1/CMakeLists.txt
@@ -16,6 +16,9 @@ project (emumsx1)
 set(EXEC_TARGET emumsx1)
 set(VM_NAME msx)
 set(USE_FMGEN ON)
+set(WITH_JOYSTICK ON)
+set(WITH_MOUSE ON)
+
 set(VMFILES_BASE
   z80.cpp
   tms9918a.cpp
