[VM][CMAKE][MZ2800][MZ5500][PASOPIA][PASOPIA7] Fix FTBFSs.

--- a/source/build-cmake/mz2800/CMakeLists.txt
+++ b/source/build-cmake/mz2800/CMakeLists.txt
@@ -15,6 +15,9 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 project (mz2800)
 set(VM_NAME mz2800)
 set(USE_FMGEN ON)
+set(WITH_JOYSTICK ON)
+set(WITH_MOUSE ON) 
+
 set(VMFILES
 		   i286.cpp
 		   mb8877.cpp
