[VM][CMAKE][PHC25][PV1000][PV2000][PYUTA][PC98HA][PCENGINE] Fix FTBFSs.

--- a/source/build-cmake/pv2000/CMakeLists.txt
+++ b/source/build-cmake/pv2000/CMakeLists.txt
@@ -15,6 +15,9 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 project (pv2000)
 set(VM_NAME pv2000)
 set(USE_FMGEN OFF)
+set(WITH_JOYSTICK ON)
+set(WITH_MOUSE OFF)
+
 set(VMFILES
 		   z80.cpp
 		   sn76489an.cpp
