[VM][CMAKE][SMC777][TK80BS] Fix FTBFSs.

--- a/source/build-cmake/tk80bs/CMakeLists.txt
+++ b/source/build-cmake/tk80bs/CMakeLists.txt
@@ -16,7 +16,7 @@ project (emutk80bs)
 
 set(VM_NAME tk80bs)
 set(USE_FMGEN OFF)
-set(WITH_JOYSTICK ON)
+set(WITH_JOYSTICK OFF)
 set(WITH_MOUSE ON)
 
 set(VMFILES_BASE
