--- a/source/src/qt/common/CMakeLists.txt
+++ b/source/src/qt/common/CMakeLists.txt
@@ -4,6 +4,9 @@ set(s_qt_common_headers
 	  emu_thread.h
 	  draw_thread.h
 	  menu_metaclass.h
+	  mainwidget.h
+	  display_about.h
+	  dropdown_jspage.h
 )
 
 if(WITH_JOYSTICK)
@@ -21,8 +24,13 @@ set(QT_COMMON_BASE
 	  qt_main.cpp
 	  menu_flags.cpp
 	  menu_metaclass.cpp
+	  display_about.cpp
+	  dropdown_jspage.cpp
 	  emu_thread.cpp
 	  draw_thread.cpp
+	  util_fd2.cpp
+	  util_bubble2.cpp
+	  util_main.cpp
 	  agar_logger.cpp
 )
 
