[VM][General][Qt] Move src/common.cpp , src/fileio.cpp and src/fifo.cpp to libCSPgui.so.1.1.0 (or later).

--- a/source/src/qt/gui/CMakeLists.txt
+++ b/source/src/qt/gui/CMakeLists.txt
@@ -72,6 +72,10 @@ set(s_qt_gui_srcs
 	  draw_thread.cpp
 	  joy_thread.cpp
 	  agar_logger.cpp
+	  
+	  ../../common.cpp
+	  ../../fifo.cpp
+	  ../../fileio.cpp
 )
 
 if(USE_QT_5)
