--- a/source/src/CMakeLists.txt
+++ b/source/src/CMakeLists.txt
@@ -3,11 +3,10 @@ message("* common/common")
 #set(CMAKE_BUILD_SETTING_C_FLAGS "${CMAKE_C_FLAGS} -msse2 -msse -mmmx")
  
 add_library(common_common
-	  common.cpp
+#	  common.cpp
 	  config.cpp
-#	  emu.cpp
-	  fifo.cpp
-	  fileio.cpp
+#	  fifo.cpp
+#	  fileio.cpp
 	  debugger.cpp
 )
 
